# Ai_agent

./: .env  .env.example  .gitignore  README.md  pyproject.toml
ai_agentv1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: errors.py  main.py
app/api/routes/: chat.py
app/config/: settings.py
app/orchestrator/: contracts.py  core.py  models.py
app/orchestrator/context/: builder.py
app/orchestrator/execution/: tool_dispatcher.py
app/orchestrator/planning/: planner.py  simple.py
app/orchestrator/routing/: router.py  simple.py
app/orchestrator/session/: manager.py  store.py
app/orchestrator/synthesis/: result_synthesizer.py
app/orchestrator/verification/: code_verifier.py  verifier.py
app/providers/llm/: base.py  lmstudio.py
app/providers/memory/: base.py  factory.py  json_file.py  models.py  noop.py  policy.py
app/schemas/: chat.py
app/tools/: base.py  path_safety.py  registry.py
app/tools/files/: read_file.py  write_file.py
app/tools/git/: __init__.py  _runner.py  diff.py  log.py  status.py
app/tools/project/: __init__.py  scan_project.py  search_project.py
app/tools/terminal/: run_command.py
app/utils/: logging.py  request_context.py
data/memory/: interactions.jsonl
docs/: FOUNDATION_DECISIONS.md
tests/: test_api.py  test_code_verifier.py  test_errors.py  test_file_tools.py  test_git_tools.py  test_lmstudio_provider.py  test_memory_policy.py  test_orchestrator_code_verifier.py  test_project_tools.py  test_router.py  test_settings_paths.py  test_terminal_tool.py  test_tool_safety.py  test_verifier.py
