[project]
name = "ai-agentv1"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "pydantic>=2.13.1",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.3",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.15",
]
